farewell-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: farewell
spec:
  selector:
    app: farewell
  ports:
    - protocol: TCP
      port: 7777

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: farewell
          servicePort: 7777
