k8s-system-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-system-ingress
spec:
  tls:
   - hosts:
      - solar.cs.nthu.edu.tw
     secretName: lets-encrypt
  rules:
  - host: solar.cs.nthu.edu.tw
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 30443
